회원가입 로그인 테스트 구현

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -15,13 +15,13 @@ member.getM_email();
 member.getM_pw();
 member.getM_gender(); 
         -->
-      <input type="text" name="m_id" placeholder="아이디" required />
-      <input type="email" name="m_email" placeholder="이메일" required />
-      <input type="password" name="m_pw" placeholder="비밀번호" required />
+      <input type="text" name="id" placeholder="아이디" required />
+      <input type="email" name="email" placeholder="이메일" required />
+      <input type="password" name="pw" placeholder="비밀번호" required />
       <div>
-        <input type="radio" name="m_gender" id="male" value="M" required />
+        <input type="radio" name="gender" id="male" value="M" required />
         <label for="male">남성</label>
-        <input type="radio" name="m_gender" id="female" value="F" required />
+        <input type="radio" name="gender" id="female" value="F" required />
         <label for="female">여성</label>
       </div>
       <input type="submit" value="가입하기" />
