--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,8 @@
 
   <body>
     <form th:action="@{memberLogin}" method="post" th:object="${member}">
-      <input type="text" name="m_id" placeholder="아이디" required />
-      <input type="password" name="m_pw" placeholder="비밀번호" required />
+      <input type="text" name="id" placeholder="아이디" required />
+      <input type="password" name="pw" placeholder="비밀번호" required />
       <input type="submit" value="로그인" />
     </form>
   </body>
