--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,11 +8,11 @@
         <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="홈" />
         홈
     </a>
-    <a href="category.html">
+    <a href="goCategory">
         <img src="https://cdn-icons-png.flaticon.com/512/25/25391.png" alt="카테고리" />
         카테고리
     </a>
-    <a href="wishlist.html">
+    <a href="goWishlist">
         <img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" alt="찜" />
         찜
     </a>
