--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
     <form method="post" th:action="@{/memberLogin}" th:object="${member}">
       <!-- 아이디 또는 이메일 입력 -->
       <span class="login-id">
-        <input type="text" id="login-id" name="id" placeholder="ID 또는 email" required />
+        <input type="text" id="login-id" name="id" placeholder="ID" required />
       </span>
 
       <!-- 비밀번호 입력 -->
