--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -20,10 +20,18 @@
     </div>
 
     <form method="post" th:action="@{/memberInsert}" th:object="${member}">
-      <!-- 아이디 또는 이메일 입력 -->
+      <!-- 아이디 입력 -->
       <span class="join-id">
         <div class="input-wrapper">
-          <input type="text" id="id" name="id" placeholder="ID 또는 email" required />
+          <input type="text" id="id" name="id" placeholder="ID" required />
+          <button type="button" class="check-button">중복확인</button>
+        </div>
+      </span>
+
+      <!-- 이메일 입력 -->
+      <span class="join-id">
+        <div class="input-wrapper">
+          <input type="text" id="email" name="email" placeholder="EMAIL" required />
           <button type="button" class="check-button">중복확인</button>
         </div>
       </span>
