--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -16,7 +16,7 @@
         <img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" alt="찜" />
         찜
     </a>
-    <a href="profile.html">
+    <a href="goMypage">
         <img src="https://cdn-icons-png.flaticon.com/512/747/747376.png" alt="마이페이지" />
         마이페이지
     </a>
