--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
 
 
 <div class="topbar">
-    <h1>mueossa</h1>
+    <a href="goHome"><h1>mueossa</h1></a>
     <div class="search-place">
         <form action="#" class="search-keyword">
             <input type="text" placeholder="검색어를 입력하세요" />
