--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mueossa</title>
-
+    <script th:src="@{/js/main_script.js}"></script>
     <link rel="stylesheet" th:href="@{/css/main_style.css}" />
 
     <th:block layout:fragment="script"></th:block>
