--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -120,6 +120,30 @@ body {
 
 }
 
+/* 취향테이블 스타일 */
+
+.preference-button {
+  width: 80px;
+  height: 25px;
+  border-radius: 10px;
+  background-color: #ffffffb6;
+  margin: 5px;
+  font-family: Arial, sans-serif;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  transition: background-color 0.3s, ease, color 0.3s, ease;
+}
+
+.preference-button:hover {
+  background-color: #f0f0f0;
+}
+
+.preference-button.selected {
+  background-color: #4CAF50; /* 선택된 버튼의 배경색 */
+  color: white; /* 선택된 버튼의 텍스트 색상 */
+  border: 1px solid #4CAF50; /* 선택된 버튼의 테두리 색상 */
+}
+
 /* 로그인 폼 스타일 */
 #login {
     padding: 20px;
