마이페이지

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -44,6 +44,8 @@
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
 
     </div>
+
+    <th:block layout:fragment="script-footer"></th:block>
 </body>
 
 </html>
