--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -11,7 +11,7 @@
 
     <!-- 여기 카테고리에요! -->
     <div id="category" class="page">
-        <div class="section-title">카테고리가 비어있습니다.</div>
+        <div class="section-title2">카테고리가 비어있습니다.</div>
       </div>
 
 
