--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -11,7 +11,7 @@
 
     <!-- 여기 찜이에요! -->
     <div id="wishlist" class="page">
-        <div class="section-title">찜한 상품이 없습니다.</div>
+        <div class="section-title2">찜한 상품이 없습니다.</div>
       </div>
 
       
