--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'NanumSquareR';
+  src: url('../font/NanumSquareR.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -126,13 +133,13 @@ body {
 
 
 .mypage-button {
-  width: 80px;
-  height: 25px;
+  width: 240px;
+  height: 80px;
   border-radius: 10px;
   background-color: #ffffffb6;
   margin: 5px;
   font-family: Arial, sans-serif;
-  font-size: 10px;
+  font-size: 20px;
   border: 1px solid #ccc;
   cursor: pointer;
   transition: background-color 0.3s, ease, color 0.3s, ease;
@@ -142,11 +149,7 @@ body {
   background-color: #4CAF50;
 }
 
-.mypage-button.selected {
-  background-color: #4CAF50; /* 선택된 버튼의 배경색 */
-  color: white; /* 선택된 버튼의 텍스트 색상 */
-  border: 1px solid #4CAF50; /* 선택된 버튼의 테두리 색상 */
-}
+
 /* 취향테이블 스타일 */
 
 .preference-button {
@@ -225,7 +228,7 @@ body {
   }
   
   .login-buttons button:hover {
-    background-color: #45a049;
+    background-color: #4caf4fb0;
   }
 
 /* 회원가입 폼 스타일 */
@@ -239,6 +242,35 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    margin-top: 50%;
+  }
+
+  .section-title2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+
+
+  .main-title {
+    font-size: 18px;
+    font-weight: bold;
+    height: 30px;
+    line-height: 40px; /* 텍스트 세로 중앙 정렬 */
+    margin-top: 40px;
+    text-align: center;
+    font-family: 'NanumSquareR', sans-serif;
+  }
+  
+  .main-title2 {
+    font-size: 10px;
+    font-weight: bold;
+    height: 40px;
+    line-height: 40px; /* 텍스트 세로 중앙 정렬 */
+    text-align: center;
+    margin-bottom: 10px;
+    font-family: 'NanumSquareR', sans-serif;
   }
   
   span {
@@ -296,6 +328,12 @@ body {
     margin: 40px 0;
   }
   
+  .divider2 {
+    border-top: 2px solid #ccc;
+    margin: 0px 120px;
+    margin-bottom: 30px;
+  }
+
   .join-links {
     margin: 20px 0;
     font-size: 12px;
@@ -338,26 +376,20 @@ body {
     display: block;
 }
 
-.section-title {
-    font-weight: bold;
-    font-size: 16px;
-    margin: 16px;
-}
 
 .product-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
-    padding: 0 16px;
-    justify-content: center;
+    gap: 10px;
+    justify-content: space-between;
+    padding: 0 8px;
 }
 
 .product-card {
     background: white;
-    border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     overflow: hidden;
-    width: 45%;
+    width: calc(33.33% - 16px);
 }
 
 .product-card img {
