--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,12 @@
             <button type="submit" class="search-button"></button>
         </form>
     </div>
+
+    
+    <div class="login-box" onclick="location.href='goLogin'">
+        <img th:src="@{/images/favicon_login.ico}" alt="Login" class="login-image">
+    </div>
+
     <div class="login-box" onclick="location.href='goLogin'">
         <img th:src="@{/images/favicon_login.ico}" alt="Login" class="login-image">
     </div>
