--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,8 +15,14 @@
         <div class="banner">
             <img src="https://picsum.photos/400/150?random=1" alt="배너" />
         </div>
+        
+            <div class="main-title">사용자의 취향에 맞는 추천 상품</div>
+     
 
-        <div class="section-title">New Arrivals</div>
+        <div class="main-title2">사용자의 취향에 맞는 추천 상품</div>
+
+        <div class="divider2"></div>
+
         <div class="product-list">
             <!-- 상품 카드 반복 -->
             <!-- 18개의 카드 -->
