로그인기능

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,10 +28,12 @@
             <!-- 반복문처럼 생성된 카드들 -->
             <!-- 아래 예시로 18개 중 1~3만 예시로 작성 -->
             <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=1" alt="상품 이미지" />
+                <img src="https://picsum.photos/300/200?random=1" alt="상품 이미지" name="pd_image"/>
                 <div class="product-info">
-                    <div class="product-title">플라워 원피스</div>
-                    <div class="product-price">₩39,000</div>
+                    <div class="product-title" name="pd_name">플라워 원피스</div>
+                    <div class="product-title" name="pd_rating"></div>
+                    <div class="product-title" name="discount"></div>
+                    <div class="product-price" name="pd_price">₩39,000</div>
                 </div>
             </div>
 
