--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,98 +36,15 @@
             <div class="product-card">
                 <img src="https://picsum.photos/300/200?random=1" alt="상품 이미지" name="pd_image"/>
                 <div class="product-info">
-                    <div class="product-title" name="pd_name">플라워 원피스</div>
-                    <div class="product-title" name="pd_rating"></div>
-                    <div class="product-title" name="discount"></div>
+                    <div class="product-brand" name="pd_brand">반스</div>
+                    <div class="product-name" name="pd_name">올드스쿨 어쩌고,,,,</div>
+                    <div class="product-rating" name="pd_rating">3.2</div>
+                    <div class="product-title" name="discount">10%</div>
                     <div class="product-price" name="pd_price">₩39,000</div>
                 </div>
             </div>
 
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=2" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://picsum.photos/300/200?random=3" alt="상품 이미지" />
-                <div class="product-info">
-                    <div class="product-title">베이직 셔츠</div>
-                    <div class="product-price">₩29,000</div>
-                </div>
-            </div>
+            
 
             <!-- 생략된 나머지 카드들은 같은 형식으로 4~18까지 random 파라미터만 바꾸면 됨 -->
         </div>
