--- a/src/main/resources/templates/제품나열테스트.html
+++ b/src/main/resources/templates/제품나열테스트.html
@@ -14,8 +14,18 @@
   <!-- 콘텐츠 -->
   <div layout:fragment="content">
     <div id="home" class="page active">
-      <div class="banner">
-        <img src="https://picsum.photos/400/150?random=1" alt="배너" />
+      <div class="banner-slider">
+          <button class="prev-slide">〈</button> <!-- 이전 슬라이드 버튼 -->
+          <div class="slides">
+              <img src="/images/banner/무엇사_배너_디자인_01.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_02.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_03.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_04.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_05.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_06.jpg" alt="배너" />
+              <img src="/images/banner/무엇사_배너_디자인_07.jpg" alt="배너" />
+          </div>
+          <button class="next-slide">〉</button> <!-- 다음 슬라이드 버튼 -->
       </div>
 
       <div class="main-title">사용자의 취향에 맞는 추천 상품</div>
@@ -25,33 +35,27 @@
       <div class="divider2"></div>
 
       <div class="product-list">
-        <!-- 상품 카드 반복 -->
-        <!-- 18개의 카드 -->
-        <!-- for demo purposes only -->
-        <!-- 각 카드마다 random 이미지 부여 -->
-        <!-- 반복적으로 생성 -->
-        <!-- 아래는 예시 -->
-
-        <!-- 반복문처럼 생성된 카드들 -->
-        <!-- 아래 예시로 18개 중 1~3만 예시로 작성 -->
 
         <th:block th:each="product : ${productList}">
           <div class="product-card">
             <a th:href="@{제품상세테스트(pId=${product.pId})}">
               <img th:src="${product.pImage}" alt="상품 이미지" />
               <div class="product-info">
-                <div class="product-title" th:text="${product.pName}"></div>
+                <div class="product-brand" th:text="${product.pBrand}"></div>
+                <div class="product-name" th:text="${product.pName}"></div>
                 <div
-                  class="product-title"
+                  class="product-rating"
                   name="pd_rating"
                   th:text="${product.pRating}"
                 ></div>
-                <div
-                  class="product-title"
+                <div class="price-line">
+                <span
+                  class="product-discount"
                   name="discount"
                   th:text="${product.pDiscount}"
-                ></div>
-                <div class="product-price" th:text="${product.pPrice}"></div>
+                ></span>
+                <span class="product-price" th:text="${product.pPrice}"></span>
+              </div>
               </div>
             </a>
           </div>
