--- a/src/main/resources/templates/제품나열테스트.html
+++ b/src/main/resources/templates/제품나열테스트.html
@@ -26,16 +26,10 @@
 
       <div class="product-list">
         <!-- 상품 카드 반복 -->
-        <!-- 18개의 카드 -->
-        <!-- for demo purposes only -->
-        <!-- 각 카드마다 random 이미지 부여 -->
         <!-- 반복적으로 생성 -->
-        <!-- 아래는 예시 -->
         <!-- 반복문처럼 생성된 카드들 -->
         <!-- 아래 예시로 18개 중 1~3만 예시로 작성 -->
-        <th:block th:each="product, status : ${productList}">
-          <!-- <div th:if="${categoryList[status.index].ctComf == 'Y'}">편안함</div> -->
-
+        <th:block th:each="product : ${prodCateList}">
           <div class="product-card">
             <a th:href="@{제품상세테스트(pId=${product.pId})}">
               <img th:src="${product.pImage}" alt="상품 이미지" />
@@ -56,51 +50,21 @@
             </a>
 
             <div>
-              <p th:if="${categoryList[status.index].comfStatus == 'Y'}">
-                편한
-              </p>
-              <p th:if="${categoryList[status.index].fluffyStatus == 'Y'}">
-                푹신한
-              </p>
-              <p th:if="${categoryList[status.index].lightStatus == 'Y'}">
-                가벼운
-              </p>
-              <p th:if="${categoryList[status.index].softStatus == 'Y'}">
-                부드러운
-              </p>
-              <p th:if="${categoryList[status.index].flatStatus == 'Y'}">
-                플랫한
-              </p>
-              <p th:if="${categoryList[status.index].prettyStatus == 'Y'}">
-                예쁜
-              </p>
-              <p th:if="${categoryList[status.index].cuteStatus == 'Y'}">
-                귀여운
-              </p>
-              <p th:if="${categoryList[status.index].neatStatus == 'Y'}">
-                깔끔한
-              </p>
-              <p th:if="${categoryList[status.index].modernStatus == 'Y'}">
-                모던함
-              </p>
-              <p th:if="${categoryList[status.index].hipStatus == 'Y'}">
-                휘뚜루마뚜루
-              </p>
-              <p th:if="${categoryList[status.index].wideStatus == 'Y'}">
-                발볼이 넓은
-              </p>
-              <p th:if="${categoryList[status.index].narrowStatus == 'Y'}">
-                발볼이 좁은
-              </p>
-              <p th:if="${categoryList[status.index].standardStatus == 'Y'}">
-                발볼이 보통
-              </p>
-              <p th:if="${categoryList[status.index].costStatus == 'Y'}">
-                가격이 착한
-              </p>
-              <p th:if="${categoryList[status.index].strongStatus == 'Y'}">
-                튼튼한
-              </p>
+              <p th:if="${product.ctComf} == 'Y' ">편한</p>
+              <p th:if="${product.ctFluffy} == 'Y' ">푹신한</p>
+              <p th:if="${product.ctLight} == 'Y' ">가벼운</p>
+              <p th:if="${product.ctSoft} == 'Y' ">부드러운</p>
+              <p th:if="${product.ctFlat} == 'Y' ">플랫한</p>
+              <p th:if="${product.ctPretty} == 'Y' ">예쁜</p>
+              <p th:if="${product.ctCute} == 'Y' ">귀여운</p>
+              <p th:if="${product.ctNeat} == 'Y' ">깔끔한</p>
+              <p th:if="${product.ctModern} == 'Y' ">모던함</p>
+              <p th:if="${product.ctHip} == 'Y' ">휘뚜루마뚜루</p>
+              <p th:if="${product.ctWide} == 'Y' ">발볼이 넓은</p>
+              <p th:if="${product.ctNarrow} == 'Y' ">발볼이 좁은</p>
+              <p th:if="${product.ctStandard} == 'Y' ">발볼이 보통</p>
+              <p th:if="${product.ctCost} == 'Y' ">가격이 착한</p>
+              <p th:if="${product.ctStrong} == 'Y' ">튼튼한</p>
             </div>
           </div>
         </th:block>
