탑버튼 만들다 말았음

--- a/src/main/resources/templates/제품상세테스트.html
+++ b/src/main/resources/templates/제품상세테스트.html
@@ -14,43 +14,34 @@
   <!-- 콘텐츠 -->
   <div layout:fragment="content">
     <div id="home" class="page active">
-      <div class="banner">
-        <img src="https://picsum.photos/400/150?random=1" alt="배너" />
-      </div>
-
-      <div class="main-title">사용자의 취향에 맞는 추천 상품</div>
-
-      <div class="main-title2">사용자의 취향에 맞는 추천 상품</div>
-
-      <div class="divider2"></div>
+      
 
       <div class="product-list">
         <!-- 상품 카드 반복 -->
 
-        <div class="product-card">
+        <div class="product-discription-card">
           <img th:src="${product.pImage}" alt="상품 이미지" />
-          <div class="product-info">
-            <div class="product-title" th:text="${product.pName}"></div>
+          <div class="product-discription-info">
+            <!-- 신발 종류 -->
+            <div class="product-discription-category"th:text="'카테고리: '+${product.pGroup} +' > '+ ${product.pType}"></div>
+            <div class="product-discription-name" th:text="${product.pName}"></div>
             <div
-              class="product-title"
+              class="product-discription-rating"
               name="pd_rating"
-              th:text="${product.pRating}"
+              th:text="|⭐${product.pRating}|"
             ></div>
             <div
-              class="product-title"
+              class="product-discription-discount"
               name="discount"
               th:text="${product.pDiscount}"
             ></div>
-            <div class="product-price" th:text="${product.pPrice}"></div>
-            <!-- 신발 종류 -->
-            <div
-              th:text="'카테고리: '+${product.pGroup} +' > '+ ${product.pType}"
-            ></div>
+            <div class="product-discription-price" th:text="${product.pPrice}"></div>
+
           </div>
         </div>
 
         <!-- 카테고리 점수 -->
-        <th:block>
+        <div class="product-discription-category-score">
           <div th:text="'편한: '+ ${prodFeelCategory.ctComf}"></div>
           <div th:text="'푹신한: '+ ${prodFeelCategory.ctFluffy}"></div>
           <div th:text="'부드러운: '+ ${prodFeelCategory.ctSoft}"></div>
@@ -65,12 +56,12 @@
           <div th:text="'발볼이 보통: '+ ${prodFeelCategory.ctStandard}"></div>
           <div th:text="'가격이 착한: '+ ${prodFeelCategory.ctCost}"></div>
           <div th:text="'튼튼한: '+ ${prodFeelCategory.ctStrong}"></div>
-        </th:block>
+        </div>
 
         <!-- 제품 설명 이미지 -->
-        <th:block th:each="productImage : ${ProdImageList}">
+        <div class="product-discription-image"th:each="productImage : ${ProdImageList}">
           <img th:src="${productImage.imgName}" alt="상품 이미지" />
-        </th:block>
+        </div>
       </div>
     </div>
   </div>
