--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -44,6 +44,9 @@
 
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
 
+        <!-- Top 버튼 아직 안만듦-->
+        <button id="topButton" class="top-button">▲</button>
+
     </div>
 
     <th:block layout:fragment="script-footer"></th:block>
