--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -25,6 +25,11 @@ body {
   /* ✅ body 스크롤 막기 */
 }
 
+p {
+  display: block;
+  visibility: visible;
+  color: black; /* 텍스트 색상 */
+}
 .background {
   background-image: url('../images/bgimg.jpg');
   background-size: cover;
